# BLUENRG-RP2040

./: CMakeLists.txt  btle_callbacks.c  btle_callbacks.h  btle_driver.c  btle_driver.h  main.c
BlueNRG-2/: RTE_Components.h  ble_list.c  ble_list_utils.h  bluenrg1_gap.h  bluenrg_conf.h  hci_tl.c  hci_tl_interface.c  hci_tl_interface.h  link_layer.h
